@@ -5,8 +5,9 @@
  * MAC validation is yet to be added [19-08-2013]
  * Make pgen_store_dec to pgen_store_num to support hex also. Also validate the
    number before converting. [19-08-2013]
- * Add IA_NA and IA_TA option for DHCPv6 message
+ * Add IA_NA and IA_TA option for DHCPv6 message [29-09-2013]
  * Add Authentication option for DHCPv6 message
+ * DHCPv6 Options for network boot RFC-5970
 
 Bugs:
  * ICMPv6 checksum manual entry should be converted to network byte stream
