@@ -28,8 +28,23 @@ UDP_DATA=DHCPV6
 
 DHCP6_MSG_TYPE=1
 DHCP6_TRANS_ID=0x123
-DHCP6_OP_NUM=6
+DHCP6_OP_NUM=2
 
+DHCP6_OP_CODE=3
+DHCP6_OP_LEN=12
+DHCP6_OPTION=DHCP6_OPTION_IANA
+DHCP6_IANA_IAID=0XABCDEF0
+DHCP6_IANA_T1=12345
+DHCP6_IANA_T2=67890
+DHCP6_IANA_OP_NUM=0
+
+DHCP6_OP_CODE=4
+DHCP6_OP_LEN=4
+DHCP6_OPTION=DHCP6_OPTION_IATA
+DHCP6_IATA_IAID=0Xabcdef
+DHCP6_IATA_OP_NUM=0
+
+/*
 DHCP6_OP_CODE=1
 DHCP6_OP_LEN=6
 DHCP6_OPTION=DHCP6_CLIENT_ID
@@ -60,3 +75,4 @@ DHCP6_OP_CODE=12
 DHCP6_OP_LEN=16
 DHCP6_OPTION=DHCP6_OP_SERVER_UNICAST
 DHCP6_OP_SER_UNICAST_ADDR=fe80::23
+*/
